# cetaceans-filtering

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
animal2vec/: Dockerfile  README.md  __init__.py  a100_speedups.py  requirements-torch2.txt  torch2_compat.py  train.py
animal2vec/nn/: __init__.py  audio_tasks.py  audio_train_routine.py  bestrq.py  criterions.py  data2vec2.py  utils.py  wav2vec2.py
animal2vec/scripts/: animal2vec_manifest.py  get_ap_scores_from_predictions.py  prepare_arb_data_for_audio_pretraining.py
animal2vec/tests/: test_arch_flags.py  test_bestrq.py
animal2vec_validation/: README.md  a2v_dynamics.py  a2v_extract.py  a2v_filter.py  a2v_layer_sweep.py  a2v_shap.py  a2v_shap_replot.py  a2v_shap_tb.py  a2v_watkins.py  filter_baselines.py  filter_plot.py  run_dynamics.sh  watkins_baselines.py
configs/: config.yaml
configs/data_loading/: data_loading.yaml
configs/perch_embeddings/: perch_v2_embed.yaml
configs/perch_training/: train_perch_watkins_classifier.yaml
configs/sed_training/: train_sed_classifier.yaml
configs/sound_event_detection/: convert_annotations_to_manifest.yaml
configs/voxaboxen/: voxaboxen.yaml
docs/animal2vec_dataset_download/: README.md
docs/animal2vec_training/: README.md
docs/marine_mammal_ssl/: A100_SPEEDUP.md  ANVAR_RUNS2_ANALYSIS.md  ARTIFACTS.md  DIAGNOSIS_ANVAR_RUN.md  MASKING_BUG_CORRECTION.md  PLAN.md  SHAP_ANALYSIS.md  TRAINING_SPEED.md  a100_speedups.py
filtering/embed/: perch_v2_embed.py
filtering/sed/: convert_annotations.py  (+1 more)
scripts/: validate_animal2vec_unified.py
(+94 files in other folders)
