[project]
name = "cetaceans-filtering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.40.52",
  "datasets[audio]>=4.8.4",
  "hydra-core>=1.3.2",
  "librosa>=0.11.0",
  "matplotlib>=3.10.7",
  "onc>=2.6.0",
  "scikit-learn>=1.8.0",
  "soundfile>=0.13.1",
]

[dependency-groups]
perch = ["perch-hoplite[tf]"]

[tool.uv.sources]
perch-hoplite = { git = "https://github.com/google-research/perch-hoplite" }
